<resources>
    <string name="app_name">MyTrip</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="calcular">Calcular</string>
    <string name="values_invalid">Informe valores válidos</string>
    <string name="total_quilometros">Total de quilometros</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="seu_gasto_total">Seu gasto total será de:</string>
    <string name="resultado_inicial">R$ 0,00</string>
</resources>
