<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_distance"
        style="@style/mCustomEditText"
        android:hint="@string/distancia" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/mCustomTextViewHint"
        android:text="@string/total_quilometros" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_price"
        style="@style/mCustomEditText"
        android:hint="@string/preco" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/mCustomTextViewHint"
        android:text="@string/preco_por_litro" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_autonomy"
        style="@style/mCustomEditText"
        android:hint="@string/autonomia" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/mCustomTextViewHint"
        android:text="@string/kms_por_litro"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:text="@string/seu_gasto_total"
        android:textAllCaps="true"
        android:textSize="10sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="#FD6A6A"
        android:textSize="35sp"
        android:text="@string/resultado_inicial" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_margin="15dp"
        android:padding="20dp"
        android:background="@drawable/round_btn"
        android:textColor="@color/colorLightGray"
        android:textAllCaps="true"
        android:textSize="20sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>